# grove

./: .editorconfig  .gitignore  .gitmessage  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python.yml  release.yml
conformance/: README.md
docs/: DESIGN-convert.md  DESIGN-ssh-provisioning.md  FEEDBACK.md  INSTALL.md  MCP.md  TUTORIAL.md  USAGE.md
go/: README.md
python/: README.md  pyproject.toml
python/src/grove/: __init__.py
python/src/grove/cli/: __init__.py  main.py  output.py
python/src/grove/core/: __init__.py  blockedit.py  compare.py  config.py  convert.py  create.py  doctor.py  errors.py  gitidentity.py  gitrunner.py  model.py  naming.py  ops.py  patch.py  platform.py  publish.py  remove.py  repo.py  setup.py  sshalias.py  sshcheck.py  sshdoctor.py  sshprov.py  sync.py  track.py
python/src/grove/mcp/: README.md  __init__.py  __main__.py  _ops.py  server.py
python/tests/: conftest.py  test_blockedit.py  test_compare.py  test_config.py  test_convert.py  test_integration.py  test_mcp_ops.py  test_mcp_schema.py  test_naming.py  test_platform.py  test_ssh_cli.py  test_sshalias.py  test_sshdoctor.py  test_sshprov.py  test_sshprov_add.py
rust/: README.md
spec/: specification.md
